tests/fixtures/invalid/round_dict_float.py
# Cannot call round() with Dict[str, int], Float
x = round({"a": 1}, 1.0)
